[gd_scene load_steps=8 format=3 uid="uid://b3xknekuwwxij"]

[ext_resource type="Texture2D" uid="uid://dfp55u63i8s32" path="res://Art/Spider/spider.png" id="1_7gka4"]
[ext_resource type="Script" path="res://Art/Spider/spider.gd" id="1_ss0rg"]

[sub_resource type="Animation" id="Animation_cebtf"]
resource_name = "Hurt"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Minotaur:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(),
"transitions": PackedFloat32Array(),
"update": 0,
"values": []
}

[sub_resource type="Animation" id="Animation_6egce"]
resource_name = "Normal"

[sub_resource type="AnimationLibrary" id="AnimationLibrary_4ftcw"]
_data = {
"Hurt": SubResource("Animation_cebtf"),
"Normal": SubResource("Animation_6egce")
}

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_yexk0"]
radius = 4.51203
height = 21.8047

[sub_resource type="CircleShape2D" id="CircleShape2D_ns7o8"]
radius = 193.848

[node name="CharacterBody2D" type="CharacterBody2D" groups=["Enemies"]]
scale = Vector2(2.6, 2.6)
collision_layer = 2
collision_mask = 19
motion_mode = 1
script = ExtResource("1_ss0rg")

[node name="Spider" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(1.90735e-06, -2.86102e-06)
scale = Vector2(1.3524, 1.3524)
texture = ExtResource("1_7gka4")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_4ftcw")
}

[node name="SpiderBite" type="Area2D" parent="." groups=["Enemies"]]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="SpiderBite"]
position = Vector2(0.384615, 35.7692)
scale = Vector2(3.64616, 1.30939)
polygon = PackedVector2Array(8.01105, -8.84615, 3.45304, -6.53846, -4.55801, -6.92307, -8.28729, -9.61538, -6.62983, 4.23077, 5.38674, 4.23077)

[node name="SpiderBody" type="CollisionShape2D" parent="."]
position = Vector2(-3.23117e-27, 2.69231)
scale = Vector2(4.4326, 2.36364)
shape = SubResource("CapsuleShape2D_yexk0")

[node name="HideAway" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="HideAway"]
shape = SubResource("CircleShape2D_ns7o8")

[connection signal="body_entered" from="SpiderBite" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="SpiderBite" to="." method="_on_area_2d_body_exited"]
[connection signal="body_entered" from="HideAway" to="." method="_on_hide_away_body_entered"]
[connection signal="body_exited" from="HideAway" to="." method="_on_hide_away_body_exited"]
